Closed
Bug 266857
Opened 21 years ago
Closed 21 years ago
Cannot print more than once with a printer with non-Latin1 (e.g. Japanese) characters in its name
Categories
(Core :: Printing: Output, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: masayuki, Unassigned)
Details
(Keywords: fixed-aviary1.0, fixed1.7.5, intl)
Attachments
(1 file)
|
1.43 KB,
patch
|
jshin1987
:
review+
bzbarsky
:
superreview+
asa
:
approval-aviary+
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7.3) Gecko/20041029 Firefox/1.0RC1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7.3) Gecko/20041029 Firefox/1.0RC1
I cannot print two times using Japanese named printer on Win9x.
Reproducible: Always
Steps to Reproduce:
1. Print any page using Japanese named printer.
2. Print again.
3.
Actual Results:
The printer is not found.
The error message returned by OS.
Expected Results:
No errors.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Comment 2•21 years ago
|
||
Comment on attachment 163966 [details] [diff] [review]
Patch
Please review it jungshik.
Attachment #163966 -
Flags: review?(jshin)
Comment 3•21 years ago
|
||
Comment on attachment 163966 [details] [diff] [review]
Patch
Thanks for fixing it.
Perhaps, we have to do tree-wide search for 'AssignWithConversion' and
'CopyASCIItoUTF16' to get rid of this kind of mistakes once and for all. Well,
with patches for firefox going in without a proper review (e.g. bug 266839),
that'll be an endless 'battle'.
Btw, next time you make a patch, please make a diff at the top of the tree.
Attachment #163966 -
Flags: superreview?(bzbarsky)
Attachment #163966 -
Flags: review?(jshin)
Attachment #163966 -
Flags: review+
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking1.7.x?
Flags: blocking-aviary1.0?
Keywords: intl
Summary: Cannot print two times by Japanese named printer → Cannot print more than once with a printer with non-Latin1 (e.g. Japanese) characters in its name
Comment 4•21 years ago
|
||
Comment on attachment 163966 [details] [diff] [review]
Patch
sr=bzbarsky if:
1) You make printerNameA an nsDependentCString.
2) You give printerNameA a name that makes sense (say "printerNameNative").
Attachment #163966 -
Flags: superreview?(bzbarsky) → superreview+
Comment 5•21 years ago
|
||
> Perhaps, we have to do tree-wide search for 'AssignWithConversion' and
that's what I'm currently doing, but it's a slow process... eventually, I'll
remove AssignWithConversion. but mailnews is somewhat hard to fix while it's
using filespec, which has no utf16 path/leafname getter... and I'd kinda like to
avoid spreading NS_CopyNativeToUnicode around...
| Reporter | ||
Comment 6•21 years ago
|
||
Comment on attachment 163966 [details] [diff] [review]
Patch
Jungshik, please check-in the patch.
Attachment #163966 -
Flags: approval1.7.x?
Attachment #163966 -
Flags: approval-aviary?
Comment 7•21 years ago
|
||
patch checked in to the trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 8•21 years ago
|
||
When this patch was checked in, were bz's comments addressed?
Comment 9•21 years ago
|
||
Yes, it was. Sorry I forgot to note that.
Comment 10•21 years ago
|
||
Comment on attachment 163966 [details] [diff] [review]
Patch
a=mkaply for 1.7.
Need to ping an aviary person
Attachment #163966 -
Flags: approval1.7.x? → approval1.7.x+
Comment 11•21 years ago
|
||
fix checked into 1.7 branch (with bz's concerns addressed)
seems like it missed firefox 1.0 train.
Keywords: fixed1.7.x
Comment 12•21 years ago
|
||
Comment on attachment 163966 [details] [diff] [review]
Patch
a=asa for checkin to aviary. Time is real short so this needs to land very soon
if it's going to make it.
Attachment #163966 -
Flags: approval-aviary? → approval-aviary+
Updated•21 years ago
|
Flags: blocking1.7.x?
Flags: blocking-aviary1.0?
You need to log in
before you can comment on or make changes to this bug.
Description
•