bug 266857 Cannot print more than once with a printer with non-Latin1 (e.g. Japanese) characters in its name, patch by  Masayuki Nakano <masayuki@d-toybox.com> r=me, sr=bzbarsky